<resources>
    <string name="server_url">https://nameless-tor-76402.herokuapp.com/</string>
    <string name="server_url_emulator">http://10.0.2.2:3000</string>
    <string name="app_name">EmergencySupport</string>
    <string name="login_btn">ĐĂNG NHẬP</string>
    <string name="login_anonymously">ĐANG NHẬP ẨN DANH</string>
    <string name="register_btn">ĐĂNG KÍ</string>
    <string name="sign_up">ĐĂNG KÍ</string>
    <string name="email_txt"> Email:</string>
    <string name="password"> Mật Khẩu:</string>
    <string name="create_account">Tạo Tài Khoản</string>
    <string name="login_account">Đăng Nhập</string>
    <string name="name"><font size="15px"> Tên:</font></string>
    <string name="birth_day"> Ngày Sinh:</string>
    <string name="phone_num"> Số Điện Thoại:</string>
    <string name="content_description_arrow_back_image">Back Arrow</string>
    <string name="register_create">Tạo Tài Khoản</string>
    <string name="create_account_via_social_media">Create account using social media</string>
    <string name="register_notice">"Bạn chưa có tài khoản?"</string>
    <string name="fb_btn">Facebook</string>
    <string name="tw_btn">Twitter</string>
    <string name="google_btn">Google</string>
    <string name="victim_calls_label">NGƯỜI CẦN TRỢ GIÚP</string>
    <string name="volunteer_victim_username_label">Username người dùng</string>
    <string name="volunteer_victim_username_content">Không rõ username</string>
    <string name="volunteer_victim_distance_label">Khoảng cách đến bạn</string>
    <string name="volunteer_victim_distance_content">Không rõ khoảng cách</string>
    <string name="volunteer_victim_name_label">Tên</string>
    <string name="volunteer_victim_name_content">Không rõ tên</string>
    <string name="volunteer_victim_phone_label">SĐT</string>
    <string name="volunteer_victim_phone_content">Không rõ số điện thoại</string>
    <string name="volunteer_victim_address_label">Địa chỉ</string>
    <string name="volunteer_victim_address_content">Không rõ địa chỉ</string>
    <string name="volunteer_victim_dateofbirth_label">Ngày sinh</string>
    <string name="volunteer_victim_dateofbirth_content">Không rõ ngày sinh</string>
    <string name="volunteer_victim_bloodtype_label">Nhóm máu</string>
    <string name="volunteer_victim_bloodtype_content">Không rõ nhóm máu</string>
    <string name="volunteer_victim_anamnesis_label">Tiền sử bệnh</string>
    <string name="volunteer_victim_anamnesis_content">Không rõ</string>
    <string name="volunteer_victim_allergens_label">Dị ứng</string>
    <string name="volunteer_victim_allergens_content">Không rõ</string>
    <string name="profile_attribute_show">Hiển thị: Công khai</string>
    <string name="profile_attribute_hide">Hiển thị: Riêng tư</string>
</resources>