<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3B8B8"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:clickable="true"
        android:background="@null"
        android:contentDescription="@string/content_description_arrow_back_image"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="#000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/register_edit_text_background"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/email_txt"
        android:importantForAutofill="no"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:background="@drawable/register_edit_text_background"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        android:hint="@string/password"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.031" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:background="@drawable/register_edit_text_background"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
        android:hint="@string/birth_day"
        android:importantForAutofill="no"
        android:inputType="date"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:background="@drawable/register_edit_text_background"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:hint="@string/phone_num"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/back_to_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account_via_social_media"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_to_login_btn"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.184">

        <Button
            android:id="@+id/menu_contacts_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fb_btn" />

        <Button
            android:id="@+id/menu_logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tw_btn" />

        <Button
            android:id="@+id/menu_user_info_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_btn" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>