<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/volunteer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa_light"
        android:maxLines="2"
        android:text="THÔNG TIN\nTRỢ GIÚP"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/volunteer_map_frame"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/volunteer_title">

        <fragment
            android:id="@+id/volunteer_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/volunteer_victim_info_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/volunteer_accept_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/volunteer_map_frame">

        <LinearLayout
            android:id="@+id/volunteer_victim_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/volunteer_victim_username_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:text="@string/volunteer_victim_username_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/volunteer_victim_username_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:text="@string/volunteer_victim_username_content"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_label_name" />

            <TextView
                android:id="@+id/volunteer_victim_distance_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_directions_run_24"
                android:text="@string/volunteer_victim_distance_label"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/volunteer_victim_distance_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:text="@string/volunteer_victim_distance_content"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_label_name" />

            <TextView
                android:id="@+id/volunteer_victim_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:text="@string/volunteer_victim_name_label"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/volunteer_victim_name_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:text="@string/volunteer_victim_name_content"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_label_name" />

            <TextView
                android:id="@+id/volunteer_victim_phone_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:text="@string/volunteer_victim_phone_label"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/volunteer_victim_phone_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="8dp"
                android:text="@string/volunteer_victim_phone_content"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/volunteer_victim_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_place_24"
                android:text="@string/volunteer_victim_address_label"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/volunteer_victim_address_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="8dp"
                android:text="@string/volunteer_victim_address_content"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/volunteer_victim_dateofbirth_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:text="@string/volunteer_victim_dateofbirth_label"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/volunteer_victim_dateofbirth_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:text="@string/volunteer_victim_dateofbirth_content"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_label_name" />

            <TextView
                android:id="@+id/volunteer_victim_bloodtype_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_favorite_24"
                android:text="@string/volunteer_victim_bloodtype_label"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/volunteer_victim_bloodtype_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:text="@string/volunteer_victim_bloodtype_content"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_label_name" />

            <TextView
                android:id="@+id/volunteer_victim_allergens_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_local_hospital_24"
                android:text="@string/volunteer_victim_allergens_label"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/volunteer_victim_allergens_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:text="@string/volunteer_victim_allergens_content"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_label_name" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/volunteer_accept_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:text="Chấp nhận"
        app:layout_constraintBottom_toTopOf="@+id/volunteer_stop_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/volunteer_stop_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="Từ chối"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>