<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3B8B8"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="49dp"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="Welcome Back!"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/register_edit_text_background"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:inputType="text"
        android:hint="Username"
        android:importantForAutofill="no"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="12dp"
        android:background="@drawable/register_edit_text_background"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_baseline_lock_24" />

    <ImageView
        android:id="@+id/show_pass_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ShowHidePass"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="254dp"
        android:layout_height="197dp"
        android:contentDescription="this is a logo for app"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/emergency1"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/f_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Forgot password?"
        tools:ignore="HardcodedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/sign_up_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_notice" />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/myBlue"
            android:text="@string/sign_up" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>